# deathcount-bot

./: .clang-format  .gitignore  Dockerfile  README.MD
source/: Makefile  main.cpp
src/: CMakeLists.txt  clean_cmake_artifacts.sh
src/include/: Detector.hpp  EastDetector.hpp  HeatMap.hpp  Matcher.hpp  Utils.hpp  lodepng.hpp
src/source/: CMakeLists.txt  Detector.cpp  EastDetector.cpp  HeatMap.cpp  Matcher.cpp  lodepng.cpp  main.cpp
